grafana/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-server
  # namespace: monitoring
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`grafana.localhost`)
      services:
        - name: grafana
          port: 3000
      # namespace: monitoring
  tls: {}
